# fuzzing

cmake_tools/: modifier.py  runner.py
pass/: AstPass.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  SkeletonPass.cpp  check.bc  cmake_install.cmake  lli_result.bc  lli_test.ll  logop.bc  logop.cpp  logop.ll  modified_test.bc  modified_test.ll  result.bc  test.bc  test.cpp  test.ll
runner/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  description.txt  runner  runner.cpp  test.cpp
test_project/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  llvm_files_list.txt  main  main.cpp  main.ll  mult.cpp  new_commands.json  readme.md
